--- a/src/documents_en/css/style.css.scss
+++ b/src/documents_en/css/style.css.scss
@@ -259,6 +259,7 @@ div#github-ribbon-container {
     line-height: 44px;
     font-weight: 400;
     font-size: 16px;
+    text-align: center;
 
     @include transform(rotate(45deg));
     @include transform-origin(left, top);
